Update row gap to avoid overlapping with remove button

--- a/style.css
+++ b/style.css
@@ -139,7 +139,8 @@ button:hover {
   grid-template-columns: repeat(auto-fit, 150px);
   grid-template-rows: repeat(auto-fill, 250px);
   grid-auto-flow: row;
-  gap: 15px;
+  row-gap: 50px;
+  column-gap: 18px;
   margin: 5px;
 
 }
